Fix animationa and set navbar visible if scroll down

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,7 +8,7 @@
   #root {
     width: 100%;
     max-width: 100%;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
   }
   body {
     font-family: 'Jost', sans-serif;
